# server

./: .gitignore  Dockerfile  README.md  data.pth  heroku.yml  pyproject.toml  requirements.md  sample_intents.json
.github/workflows/: python-app.yml
chat_bot/: chat.py  greeting.json  intents.json  train.py
intents_producer/: etl.py
resources/: info.py  links.py
server/: server.py  wireframe.py
tests/: calendar_mock_source.json  test_calendar_scraper.py  test_tomz_scraper.py
webscraping/lee/: curriculum_scraper.py
webscraping/roman/: prospective.py
webscraping/thomas/: calendar_scraper.py  tomz_scraper.py
