[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Lee-Roy King <leeroywking@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-watch = "^4.2.0"
flask = "^1.1.2"
flake8 = "^3.8.3"
torch = "^1.6.0"
nltk = "^3.5"
requests = "^2.24.0"
pytest-cov = "^2.10.0"
bs4 = "^0.0.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
